Ajustes na lógica de consulta, agora só módulos que o cliente tem vão aparecer e CSS também para celular

--- a/docs/erro.css
+++ b/docs/erro.css
@@ -86,3 +86,13 @@ footer .imagem_footer img {
     height: 20px; /* Ajusta o tamanho da imagem */
     margin-right: 10px; /* Espaço entre a imagem e o texto */
 }
+
+
+@media (max-width: 768px) {
+
+    .container {
+
+        width: 40%
+    }
+
+}
