Ajuste e-mail quando tem mais de um

--- a/docs/style.css
+++ b/docs/style.css
@@ -15,6 +15,7 @@ body {
 
 /* Container centralizado */
 .container {
+    background-color: white;
     display: flex;
     gap: 3%;
     align-items: center;
