--- a/docs/resultado.css
+++ b/docs/resultado.css
@@ -21,10 +21,12 @@ body {
 .modules-container {
     background-color: white;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
-    width: auto; /* Largura ajustada ao conteúdo */
-    height: auto; /* Altura ajustada ao conteúdo */
+    width: 80vw; /* A largura será 80% da largura da tela */
+    height: 95vh; /* A altura será 60% da altura da tela */
     padding: 10px;
     gap: 1%; /* Espaçamento entre os grupos de módulos */
+    max-width: 900px; /* Define um limite máximo para a largura */
+    max-height: 800px; /* Define um limite máximo para a altura */
 }
 
 
@@ -68,6 +70,7 @@ h1 {
     font-size: 2.5em;
     font-weight: 700;
     text-align: center;
+    margin: 0;
 }
 
 h2 {
