--- a/docs/resultado_BKP.css
+++ b/docs/resultado_BKP.css
@@ -159,6 +159,54 @@ footer .imagem_footer img {
     transform: scale(0.98);
 }
 
+.popup {
+    display: none; /* Escondido por padrão */
+    position: fixed; /* Posição fixa para ocupar toda a tela */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Z-index alto para aparecer na frente */
+}
+
+.popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    z-index: 1001; /* Z-index maior que o do fundo */
+}
+
+.response-message {
+    margin-top: 20px; /* Distância do topo */
+    padding: 10px;
+    border-radius: 5px;
+    display: none; /* Escondido por padrão */
+    position: fixed; /* Para que fique fixo na tela */
+    top: 20px; /* Distância do topo */
+    right: 20px; /* Distância da direita */
+    z-index: 1000; /* Alta prioridade para aparecer acima dos outros elementos */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Sombra para um efeito de destaque */
+    transform: translateX(100%); /* Começa fora da tela (à direita) */
+    opacity: 0; /* Começa invisível */
+    transition: transform 0.5s ease, opacity 0.5s ease; /* Transição suave */
+}
+
+.response-message.show {
+    transform: translateX(0); /* Mover para a posição original */
+    opacity: 1; /* Fica visível */
+}
+
+.success {
+    background-color: lightgreen; /* Cor verde clara */
+    color: darkgreen; /* Texto em verde escuro */
+}
+
+
 /* Estilo para o botão de voltar */
 .back-button {
     background-color: #2197f0;
