--- a/docs/resultado_BKP.css
+++ b/docs/resultado_BKP.css
@@ -15,6 +15,63 @@ body {
     background-attachment: fixed; /* A imagem de fundo fica fixa ao rolar a página */
 }
 
+/* Estilo para o loading */
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('assets/ImagemBackground/teste.jpg');
+    background-size: cover; /* A imagem cobre toda a tela */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita que a imagem se repita */
+    background-attachment: fixed; /* A imagem de fundo fica fixa ao rolar a página */
+    z-index: 9999;
+}
+
+/* Esconde o conteúdo enquanto o loading está ativo */
+#main-content {
+    display: none;
+}
+
+.spinner {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+    margin-right: 15px; /* Espaço à direita do spinner, para afastar da mensagem */
+}
+
+
+/* Estilo da mensagem */
+.loading p {
+    font-size: 1.5em; /* Tamanho da fonte maior */
+    font-weight: bold;
+    margin: 0; /* Remove margem padrão */
+    display: flex;
+    align-items: center; /* Alinha o texto com o spinner */
+}
+
+/* Alinha o spinner e a mensagem */
+.loading .spinner + p {
+    margin-left: 20px; /* Espaço entre o spinner e a mensagem */
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 h1 {
     font-size: 2.5em;
     font-weight: 700;
